# mixup

./: .env.example  .gitignore  README.md  environment.yml  ged  mypy.ini
R/: .gitignore  README.md  compute-pair-wise-t-tests.R  data-collection.R  data-injected-interpolation-errors.R  data-label-noise.R  data-ogbg-molhiv.R  data-std-errs.R  data-t-tests.R  functions.R  main.R  new-datasets.R  table-empirical-results.R  table-pooling.R  testing-better-vs-worse-than-baseline.R
R/output-tables/: table-10-p-values-md-a1-a2.tex  table-11-ogbg-empirical-results.tex  table-11-ogbg-p-values-md-a1-a2.tex  table-2-empirical-results.tex  table-3-pooling-table.tex  table-5-injected-interpolation-errors.md  table-9-labelnoise.tex  table-9-p-values-labelnoise-a1-a2.tex
graph_exporter/: .gitignore  pyproject.toml
graph_exporter/graph_exporter/: _loader.py  export.py  load.py  typing.py
graph_mixup/: __main__.py  resource_locators.py  search_spaces.py  typing.py
graph_mixup/augmentations/: aug_dataset.py  hp_provider.py  typing.py  vanilla_data_module_provider.py
graph_mixup/compute_ged/: README.md  __main__.py  parser.py  typing.py
graph_mixup/config/: parser.py  typing.py
graph_mixup/ged_database/: alembic.ini  models.py  utils.py
graph_mixup/ged_mixup/: __main__.py  data_module_provider.py  hyperparams.py  mixup_producer.py  parser.py  path_generator.py  typing.py
graph_mixup/import_graphs/: __main__.py  parser.py
graph_mixup/logging/: base_logger.py  fs_study_logger.py  logger_container.py  utils.py
graph_mixup/mixup_generation/: hp_provider.py  parser.py  (+2 more)
(+115 files in other folders)
