[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph_exporter"
version = "0.0.1"
authors = [
  { name="Simon Forbat", email="simon.forbat@live.de" },
]
description = "Package to import mixup graphs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
